--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ anthropic = "^0.31.2"
 langchain-anthropic = "^0.1.20"
 langchain-google-genai = "^1.0.7"
 google-generativeai = "^0.7.2"
+pymupdf = "^1.24.9"
+faiss-cpu = "^1.8.0.post1"
+pypdf2 = "^3.0.1"
+langsmith = "^0.1.94"
 
 
 [build-system]
