--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ duckduckgo-search = "^6.2.5"
 html2text = "^2024.2.26"
 lxml = {extras = ["html-clean"], version = "^5.2.2"}
 readability-lxml = "^0.8.1"
+streamlit-feedback = "^0.1.3"
+db-dtypes = "^1.2.0"
+google-cloud-bigquery = "^3.25.0"
+python-magic-bin = "^0.4.14"
 
 
 [build-system]
